--- a/julia-example-1.ipynb
+++ b/julia-example-1.ipynb
@@ -102,6 +102,14 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling CUDAdrv [c5f51814-7f29-56b8-a69c-e4d8f6be1fde]\n",
+      "└ @ Base loading.jl:1277\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "\"GeForce RTX 2080 SUPER\""
@@ -118,14 +126,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch(\"mismatch in dimension 1 (expected 4051 got 1)\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"mismatch in dimension 1 (expected 4051 got 1)\")",
+      "",
+      "Stacktrace:",
+      "  [1] _cs",
+      "    @ ./abstractarray.jl:1571 [inlined]",
+      "  [2] _cshp",
+      "    @ ./abstractarray.jl:1567 [inlined]",
+      "  [3] cat_shape(dims::Tuple{Bool, Bool}, shapes::Tuple{Tuple{Int64, Int64}, Tuple{Int64}})",
+      "    @ Base ./abstractarray.jl:1544",
+      "  [4] _cat_t(::Val{2}, ::Type{Union{Nothing, UInt8}}, ::Matrix{UInt8}, ::Vararg{Any, N} where N)",
+      "    @ Base ./abstractarray.jl:1591",
+      "  [5] cat_t(::Type{Union{Nothing, UInt8}}, ::Matrix{UInt8}, ::Vararg{Any, N} where N; dims::Val{2})",
+      "    @ Base ./abstractarray.jl:1588",
+      "  [6] _cat",
+      "    @ ./abstractarray.jl:1586 [inlined]",
+      "  [7] #cat#122",
+      "    @ ./abstractarray.jl:1725 [inlined]",
+      "  [8] hcat(::Matrix{UInt8}, ::Nothing)",
+      "    @ Base ./abstractarray.jl:1705",
+      "  [9] top-level scope",
+      "    @ In[15]:50",
+      " [10] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [11] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1051"
+     ]
+    }
+   ],
    "source": [
-    "using CuArrays, FileIO, Colors, GPUArrays, BenchmarkTools, ImageShow\n",
-    "using CuArrays: CuArray\n",
+    "using FileIO, Colors, GPUArrays, BenchmarkTools, ImageShow\n",
+    "\n",
     "\"\"\"\n",
     "The function calculating the Julia set\n",
     "\"\"\"\n",
@@ -153,7 +194,7 @@
     "for N in range\n",
     "  w, h = N, N\n",
     "  q = [ComplexF32(r, i) for i=1:-(2.0/w):-1, r=-1.5:(3.0/h):1.5]\n",
-    "  for (times, Typ) in ((cutimes, CuArray), (jltimes, Array))\n",
+    "  for (times, Typ) in ((cutimes,Array), (jltimes, Array))\n",
     "    # convert to Array or CuArray - moving the calculation to CPU/GPU\n",
     "    q_converted = Typ(q)\n",
     "    result = Typ(zeros(UInt8, size(q)))\n",
@@ -163,7 +204,7 @@
     "\t\t\t\trun_bench(q_converted, result)\n",
     "      end\n",
     "      global last_jl, last_cu # we're in local scope\n",
-    "      if result isa CuArray\n",
+    "      if result isa Array\n",
     "        last_cu = result\n",
     "      else\n",
     "      \tlast_jl = result\n",
@@ -181,9 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "ArgumentError: Package Plots not found in current path:\n- Run `import Pkg; Pkg.add(\"Plots\")` to install the Plots package.\n",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package Plots not found in current path:\n- Run `import Pkg; Pkg.add(\"Plots\")` to install the Plots package.\n",
+      "",
+      "Stacktrace:",
+      " [1] require(into::Module, mod::Symbol)",
+      "   @ Base ./loading.jl:828",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1051"
+     ]
+    }
+   ],
    "source": [
     "using Plots; plotly()\n",
     "x = repeat(range, inner = 10)\n",
@@ -194,6 +252,13 @@
     "  legend = :right, xlabel = \"2^N\", ylabel = \"speedup\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
