--- a/GPU Example 1.ipynb
+++ b/GPU Example 1.ipynb
@@ -6,112 +6,80 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/device:GPU:0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import timeit\n",
-    "\n",
-    "device_name = tf.test.gpu_device_name()\n",
-    "device_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/device:GPU:0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import timeit\n",
-    "\n",
-    "device_name = tf.test.gpu_device_name()\n",
-    "device_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time (s) to convolve 32x7x7x3 filter over random 200x200x200x3 images (batch x height x width x channel). Sum of ten runs.\n",
-      "CPU (s):\n",
-      "1.5092074560016044\n",
-      "GPU (s):\n",
-      "0.139314606996777\n",
-      "GPU speedup over CPU: 10x\n"
+      "device name \n",
+      "\n",
+      "\n",
+      "This error most likely means that this notebook is not configured to use a GPU. Change this in Notebook Settings via the command palette (cmd/ctrl-shift-P) or the Edit menu.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "SystemError",
+     "evalue": "GPU device not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-57312d8395f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;34m'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         )\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mSystemError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GPU device not found'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mcpu_avg_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_benchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/cpu:0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0mgpu_avg_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_benchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSystemError\u001b[0m: GPU device not found"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "import timeit\n",
-    "\n",
-    "device_name = tf.test.gpu_device_name()\n",
-    "if device_name != '/device:GPU:0':\n",
-    "  print(\n",
-    "      '\\n\\nThis error most likely means that this notebook is not '\n",
-    "      'configured to use a GPU.  Change this in Notebook Settings via the '\n",
-    "      'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n')\n",
-    "  raise SystemError('GPU device not found')\n",
-    "\n",
-    "def cpu():\n",
-    "  with tf.device('/cpu:0'):\n",
-    "    random_image_cpu = tf.random.normal((150, 150, 150, 3))\n",
-    "    net_cpu = tf.keras.layers.Conv2D(32, 7)(random_image_cpu)\n",
-    "    return tf.math.reduce_sum(net_cpu)\n",
-    "\n",
-    "def gpu():\n",
-    "  with tf.device('/device:GPU:0'):\n",
-    "    random_image_gpu = tf.random.normal((150, 150, 150, 3))\n",
-    "    net_gpu = tf.keras.layers.Conv2D(32, 7)(random_image_gpu)\n",
-    "    return tf.math.reduce_sum(net_gpu)\n",
-    "  \n",
-    "# We run each op once to warm up; see: https://stackoverflow.com/a/45067900\n",
-    "cpu()\n",
-    "gpu()\n",
-    "\n",
-    "# Run the op several times.\n",
-    "print('Time (s) to convolve 32x7x7x3 filter over random 200x200x200x3 images '\n",
-    "      '(batch x height x width x channel). Sum of ten runs.')\n",
-    "print('CPU (s):')\n",
-    "cpu_time = timeit.timeit('cpu()', number=10, setup=\"from __main__ import cpu\")\n",
-    "print(cpu_time)\n",
-    "print('GPU (s):')\n",
-    "gpu_time = timeit.timeit('gpu()', number=10, setup=\"from __main__ import gpu\")\n",
-    "print(gpu_time)\n",
-    "print('GPU speedup over CPU: {}x'.format(int(cpu_time/gpu_time)))"
+    "import time\n",
+    "from statistics import mean \n",
+    "INPUT_SHAPE = (32, 256, 256, 3)\n",
+    "WARMUP_STEPS = 50\n",
+    "NUM_STEPS = 200\n",
+    "def define_model():\n",
+    "    layer_1 = tf.keras.layers.Conv2D(64, 3)\n",
+    "    layer_2 = tf.keras.layers.Conv2D(32, 3)\n",
+    "    layer_3 = tf.keras.layers.Conv2D(16, 3)\n",
+    "    layer_4 = tf.keras.layers.Conv2D(8, 3)\n",
+    "    layers = [layer_1, layer_2, layer_3, layer_4]\n",
+    "    @tf.function\n",
+    "    def network():\n",
+    "        network = tf.random.normal(INPUT_SHAPE)\n",
+    "        for layer in layers:\n",
+    "            network = layer(network)\n",
+    "        return tf.math.reduce_sum(network)\n",
+    "    return network\n",
+    "def run_benchmark(device_name):\n",
+    "    print('Running `{}` Model ...'.format(device_name))\n",
+    "    with tf.device(device_name):\n",
+    "        model = define_model()\n",
+    "        # We run warmup\n",
+    "        for _ in range(WARMUP_STEPS):\n",
+    "          model().numpy()\n",
+    "        # We run full benchmark \n",
+    "        time_record = []\n",
+    "        for _ in range(NUM_STEPS):\n",
+    "            start = time.time()\n",
+    "            model().numpy()\n",
+    "            time_record.append(time.time()-start)\n",
+    "        avg_time = mean(time_record[-50:])\n",
+    "    return avg_time\n",
+    "if __name__ == \"__main__\":    \n",
+    "    device_name = tf.test.gpu_device_name()\n",
+    "    print(\"device name\", device_name)\n",
+    "    if \"gpu\" not in device_name.lower():\n",
+    "        print(\n",
+    "            '\\n\\nThis error most likely means that this notebook is not '\n",
+    "            'configured to use a GPU. Change this in Notebook Settings via the '\n",
+    "            'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n'\n",
+    "        )\n",
+    "        raise SystemError('GPU device not found')\n",
+    "    cpu_avg_time = run_benchmark('/cpu:0')\n",
+    "    gpu_avg_time = run_benchmark(device_name)\n",
+    "    print(\"CPU average time per step:\", cpu_avg_time)\n",
+    "    print(\"GPU average time per step:\", gpu_avg_time)\n",
+    "    print('GPU speedup over CPU: %.2fx' % (cpu_avg_time/gpu_avg_time))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -137,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
