Whoops, save first.

--- a/GPU Example 1.ipynb
+++ b/GPU Example 1.ipynb
@@ -2,30 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device name \n",
-      "\n",
-      "\n",
-      "This error most likely means that this notebook is not configured to use a GPU. Change this in Notebook Settings via the command palette (cmd/ctrl-shift-P) or the Edit menu.\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "SystemError",
-     "evalue": "GPU device not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-57312d8395f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;34m'command palette (cmd/ctrl-shift-P) or the Edit menu.\\n\\n'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         )\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mSystemError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GPU device not found'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mcpu_avg_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_benchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/cpu:0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0mgpu_avg_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_benchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSystemError\u001b[0m: GPU device not found"
+      "device name /device:GPU:0\n",
+      "Running `/cpu:0` Model ...\n",
+      "Running `/device:GPU:0` Model ...\n",
+      "CPU average time per step: 0.19982256412506103\n",
+      "GPU average time per step: 0.012298960685729981\n",
+      "GPU speedup over CPU: 16.25x\n"
      ]
     }
    ],
